# Pixels

./: .gitignore  CMakeLists.txt  __eigen.cpp  __eigen.hpp  __eigenHelpers.cpp  __gen.cpp  __pixel.cpp  __pixel.hpp  _eigenframes.cpp  _framerec.hpp  createCsv.py  editMeta.py  meta.csv  readme.md
data/: testing.csv  training.csv
output/: .keep
